# Odyssey-Game-Server

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  flatc  game_state.fbs  game_state_generated.h  main.cpp
Buffers/: CircularBuffer.cpp  CircularBuffer.h  LIFOCircularBuffer.cpp  LIFOCircularBuffer.h  PacketBuffer.cpp  PacketBuffer.h  PartitionedPacketBuffer.cpp  PartitionedPacketBuffer.h
Components/: ConnectionManager.cpp  ConnectionManager.h  ExecutorSlave.cpp  ExecutorSlave.h  GameLobby.cpp  GameLobby.h  Gateway.cpp  Gateway.h  LobbyManagementService.cpp  LobbyManagementService.h  Transmitter.cpp  Transmitter.h
Data Structs/: BufferHandler.h
Dev_Libs/: enet.lib
Development Env/flatbuffers/: CMakeLists.txt
Development Env/flatbuffers/CMake/: BuildFlatBuffers.cmake  FindFlatBuffers.cmake  Version.cmake  flatbuffers-config.cmake
Development Env/flatbuffers/android/app/src/main/cpp/: CMakeLists.txt
Development Env/flatbuffers/benchmarks/: CMakeLists.txt
Development Env/flatbuffers/tests/fuzzer/: CMakeLists.txt
Development Env/flatbuffers/tests/ts/: JavaScriptComplexArraysTest.js  JavaScriptRequiredStringTest.js  JavaScriptTest.js  JavaScriptUnionUnderlyingTypeTest.js  JavaScriptUnionVectorTest.js  foobar.js  monster_test.js  my-game.js  reflection.js  table-a.js  typescript.js  typescript_keywords.js  union-underlying-type.js  union_underlying_type_test.js
Development Env/flatbuffers/tests/ts/arrays_test_complex/my-game/: example.js
Development Env/flatbuffers/tests/ts/arrays_test_complex/my-game/example/: array-struct.d.ts  array-struct.js  array-struct.ts  array-table.d.ts  array-table.js  array-table.ts  nested-struct.d.ts  nested-struct.js  nested-struct.ts  outer-struct.d.ts  outer-struct.js  outer-struct.ts
Development Env/flatbuffers/tests/ts/foobar/: tab.ts
Development Env/flatbuffers/tests/ts/my-game/: example.js  example2.js  other-name-space.js
Development Env/flatbuffers/tests/ts/my-game/example/: any-ambiguous-aliases.js  any-unique-aliases.js  any.js  monster.d.ts  monster.js  monster.ts  struct-of-structs-of-structs.d.ts  struct-of-structs-of-structs.js  struct-of-structs-of-structs.ts  struct-of-structs.d.ts  struct-of-structs.js  struct-of-structs.ts  test-simple-table-with-enum.d.ts  test-simple-table-with-enum.js  test-simple-table-with-enum.ts  vec3.d.ts  vec3.js  vec3.ts
Development Env/flatbuffers/tests/ts/my-game/other-name-space/: table-b.js
Development Env/flatbuffers/tests/ts/no_import_ext/: optional-scalars.js  optional_scalars.js
Development Env/flatbuffers/tests/ts/no_import_ext/optional-scalars/: scalar-stuff.d.ts  scalar-stuff.js  scalar-stuff.ts
Development Env/flatbuffers/tests/ts/optional-scalars/: scalar-stuff.ts
Development Env/flatbuffers/tests/ts/reflection/: enum-val.d.ts  enum-val.js  enum-val.ts  enum.d.ts  enum.js  enum.ts  field.d.ts  field.js  field.ts  object.d.ts  object.js  object.ts  rpccall.d.ts  rpccall.js  rpccall.ts  schema.d.ts  schema.js  schema.ts  service.d.ts  service.js  service.ts  type.d.ts  type.js  type.ts
Development Env/flatbuffers/tests/ts/typescript/: object.d.ts  object.js  object.ts
Development Env/flatbuffers/tests/ts/union-underlying-type/: abc.js  d.d.ts  d.js  d.ts
Development Env/flatbuffers/tests/ts/union_vector/: character.js  gadget.js  movie.js  union_vector.js
DockerFile Images/: enet_game_server_img.tar
Games/: FPSRules.h  Player.cpp  Player.h
Games/FPSGame/: FPSRules.h  FPS_Game.cpp  FPS_Game.h  FPS_Player.cpp  FPS_Player.h  Game.cpp  Game.h  Player.cpp  Player.h
Servers/: DummyServer.h  GameServer.cpp  GameServer.h
Templates/: ThreadSafeData.h
Tests/: PartitionBufferTest.cpp
